apps/labello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labello
  labels:
    app: labello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labello
  template:
    metadata:
      labels:
        app: labello
    spec:
      containers:
      - name: labello
        image: chaosdorf/labello:latest
        resources:
          limits:
            cpu: '0.50'
            memory: 128M
          requests:
            cpu: '0.125'
            memory: 16M
        ports:
        - containerPort: 8000
