apps/labello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labello
spec:
  selector:
    app: labello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
