apps/labello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labello
spec:
  rules:
    - host: labello.apps.chaosdorf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labello
                port:
                  number: 80
